# qdev

./: .gitignore  Makefile  pyproject.toml  requirements.txt  test_champion_registry.json  실거래_트레이딩_시스템_전체_검증_체크리스트_v_2.md  실거래형_퀀트_트레이딩_시스템_전체_명세서.md  알고리즘_파이프라인_후보_라이브러리.md
.streamlit/: config.toml
dashboard/: app.py
docs/: IMPLEMENTATION_SUMMARY.md
reports/: candidate_offline_selection_2026-04-14.md  control_plane_dashboard_2026-04-14.md  model_cycle_20260414_112738.md  model_cycle_20260414_112900.md  model_cycle_20260414_113618.md  model_cycle_20260414_113727.md  model_cycle_20260414_123626.md  model_cycle_20260414_133634.md  model_cycle_20260414_143646.md  model_cycle_20260414_153655.md  model_cycle_20260414_163703.md  model_cycle_20260414_173713.md  model_cycle_20260414_183724.md  model_cycle_20260414_193734.md  model_cycle_20260414_203744.md  model_cycle_20260414_213752.md  model_cycle_20260414_223800.md  model_cycle_20260414_233807.md  model_cycle_20260415_003816.md  model_cycle_20260415_013824.md  model_cycle_20260415_023832.md  model_cycle_20260415_030044.md  model_cycle_20260415_033842.md  paper_broker_validation_2026-04-14.md  paper_shadow_competition_2026-04-14.md  paper_soak_recording_2026-04-14.md  pipeline_candidate_dossiers_2026-04-14.md  qdev_execution_report_2026-04-14.md  quant_resource_bundle_download_report_2026-04-14.md
scripts/: _bootstrap.py  archive_to_gdrive.py  bootstrap.sh  check_env.py  download_pipeline_references.py  download_quant_resource_bundle.sh  generate_candidate_pipeline_docs.py  generate_pipeline_docs.py  monitor_health.py  (+15 more)
(+213 files in other folders)
